--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_cadastro_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_cadastro_reserva.xml
@@ -63,11 +63,12 @@
             <EditText
                 android:id="@+id/ed_descricao"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="90dp"
                 android:layout_margin="30dp"
                 android:layout_marginEnd="30dp"
                 android:textColor="@color/corBack"
                 android:textColorHint="@android:color/black"
+                android:inputType="textMultiLine"
                 android:hint=" Descricao do uso da sala" />
         </LinearLayout>
 
@@ -129,7 +130,7 @@
             </ImageButton>
             <TextView
                 android:id="@+id/text_horaioInicial"
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="30dp"
                 android:layout_margin="20dp"
                 android:layout_marginEnd="30dp"
