--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
@@ -281,6 +281,11 @@
           android:layout_gravity="end"
           tools:ignore="MissingConstraints" />
 
+        <ListView
+            android:id="@+id/listViewReservas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+        </ListView>
     </LinearLayout>
 </ScrollView>
