--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_cadastro_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_cadastro_reserva.xml
@@ -48,18 +48,26 @@
         </LinearLayout>
 
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="70dp"
-                android:layout_margin="8dp"
-                android:src="@drawable/icon_texto_descricao"
-                >
+            <TextView
+                android:id="@+id/text_print_data"
+                android:layout_width="match_parent"
+                android:text="Data da reuniao"
+                android:textAlignment="center"
+                android:layout_height="40dp">
 
-            </ImageView>
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/ed_descricao"
                 android:layout_width="match_parent"
@@ -74,63 +82,15 @@
 
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <ImageButton
-                android:id="@+id/btn_select_data"
-                android:layout_width="100dp"
-                android:layout_height="99dp"
-                android:layout_gravity="left"
-                android:layout_margin="10dp"
-                android:layout_marginStart="1dp"
-                android:background="@null"
-                android:padding="8dp"
-                android:src="@drawable/icon_calendario"
-                />
-
-            <TextView
-                android:id="@+id/text_calendario"
-                android:layout_width="130dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                android:hint="Selecione uma data"
-                android:textColor="@color/corBack"
-                android:textColorHint="@android:color/black">
-
-            </TextView>
-
-
-        </LinearLayout>
-
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageButton
-                android:id="@+id/btn_select_horaIcial"
-                android:layout_width="100dp"
-                android:layout_height="91dp"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right"
-                android:layout_margin="8dp"
-                android:layout_toLeftOf="@id/btn_select_horaIcial"
-                android:layout_weight="0"
-                android:background="@null"
-                android:src="@drawable/icon_horai"
-                android:padding="8dp"
-                >
 
-            </ImageButton>
             <TextView
                 android:id="@+id/text_horaioInicial"
-                android:layout_width="200dp"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_margin="20dp"
                 android:layout_marginEnd="30dp"
@@ -141,30 +101,9 @@
 
             </TextView>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageButton
-                android:id="@+id/btn_select_horaFinal"
-                android:layout_width="100dp"
-                android:layout_height="91dp"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right"
-                android:layout_margin="8dp"
-                android:layout_toLeftOf="@id/btn_select_horaIcial"
-                android:layout_weight="0"
-                android:background="@null"
-                android:src="@drawable/icon_horai"
-                android:padding="8dp"
-               >
-            </ImageButton>
-
             <TextView
                 android:id="@+id/text_horaioFinal"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_margin="20dp"
                 android:layout_marginEnd="30dp"
@@ -174,6 +113,15 @@
                 android:hint="Horario final">
 
             </TextView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+
 
 
         </LinearLayout>
