--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
@@ -283,6 +283,7 @@
 
         <ListView
             android:id="@+id/listViewReservas"
+            tools:listitem="@layout/item_lista_reservas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
