--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_login_usuario.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/layout_login_usuario.xml
@@ -12,20 +12,22 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
+        android:padding="8dp"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/icon_pessoa" />
 
     <EditText
         android:id="@+id/ed_login_email"
         android:drawableLeft="@drawable/icon_email"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/corBack"
         android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_below="@+id/iv_user"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:textColorHint="@color/corBack"
+        android:padding="8dp"
+        android:hint=" Email"
         android:inputType="textEmailAddress" />
 
     <EditText
@@ -38,7 +40,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:textColorHint="@color/colorPrimaryDark"
+        android:padding="8dp"
+        android:hint=" Senha"
         android:inputType="textPassword" />
 
 
@@ -64,7 +67,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:textSize="15sp"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorPrimaryDark"
         android:background="@null"
         android:text="Cadastre-me" />
 
