--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
@@ -34,6 +34,7 @@
                 android:textSize="20sp"
                 android:text="Nome locador"
                 android:textStyle="bold"
+                android:layout_marginBottom="30dp"
                 app:layout_constraintVertical_bias="1.0"
                 tools:ignore="MissingConstraints"
                 />
@@ -46,6 +47,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints"
+                android:layout_marginTop="30dp"
                 tools:layout_editor_absoluteY="43dp">
 
 
