--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_salas.xml
@@ -56,7 +56,7 @@
                 android:text="teste"
                 tools:layout_editor_absoluteX="0dp" />
 
-            <ImageButton
+           <!-- <ImageButton
                 android:id="@+id/btn_infor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -243,7 +243,7 @@
 
 
             </androidx.cardview.widget.CardView>
-
+-->
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
